<resources>
    <string name="app_name">DrawerLayout</string>
    <string name="app_text_menu">Main content</string>
    <string name="app_open_menu">Open Menu</string>
    <string name="app_category_first">Category First</string>
    <string name="app_info">Infofmation</string>
    <string name="app_docs">Documents</string>
    <string name="app_reports">Reports</string>
    <string name="app_pay">Pay Sistem</string>
    <string name="app_category_second">Category Second</string>
    <string name="app_account">Account</string>
    <string name="app_settings">Settings</string>
    <string name="app_login">Login</string>
</resources>